# SectorCalc

./: .coderabbit.yml  .cross-wire-migration-error.txt  .cursorrules  .env.example  .env.production  .eslintrc.cjs  .firebaserc  .gitignore  .pro-v2-contract-error.txt  .typecheck-error.txt  .v5-form-test-error.txt  .v531-form-ux-error.txt  .vercelignore  AGENTS.md  AI_CONSTITUTION.md  CLAUDE-SPEC.md  DECISIONS.md  FINAL_RELEASE_MANDATE.md  HOMEPAGE_COMPLETE_DNA.txt  MANIFESTO.md  Master_Classification.txt  PRO_TOOLS_FORM_SectorCalc Pro v2.0.txt  README.md  ROOT_CAUSE.md  SECTORCALC_ENTEGRASYON_TALIMATI.md  SHARED_PATH_REPORT.md  _audit_ascii.txt  audit-free-tools.mjs  audit_report.txt  calc-audit.csv  calculator.html  calculator2.html  calculator3.html  calculator4.html  check_tools.mjs  check_valid_inputs.mjs  check_valid_tools.mjs  chunk_0.json  chunk_1.json  chunk_2.json  (+165 more)
.cursor/: hooks.json
.githooks/: pre-commit
.github/: CODEOWNERS  ENGINEERING_CONTROL_PLANE.md  INDUSTRIAL_QUALITY_SETUP.md  copilot-instructions.md  dependabot.yml
.husky/: pre-push
.sentinel/: prod-test.mjs  sectorcalc.bridge.mjs
PRO TOOLSLARA EKLEME/: sectorcalc_pro_091_095.js  sectorcalc_pro_096_100.js  sectorcalc_pro_101_105.js  (+1 more)
math-kernel/: .gitignore  Dockerfile  __init__.py  api.py  conftest.py  elite_engine.py  free_transcendental_engine.py  interval_engine.py  math_models.py  mms_generator.py  pyproject.toml  pytest.ini  requirements.txt  vpc-connector.yaml
math-kernel/tests/: __init__.py  test_api.py  test_free_transcendental_engine.py  test_interval_engine.py  test_mms.py
(+12014 files in other folders)
