[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sectorcalc-math-kernel"
version = "1.0.0"
description = "C-XSC compatible interval arithmetic engine for SectorCalc"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "mpmath>=1.3",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "strict_bounds: marks test that verifies strict interval bound compliance",
    "hypothesis: marks property-based hypothesis test",
    "mms: marks Method of Manufactured Solutions test",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "conftest.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
